name: control-monad-free
version: 0.4.1
Cabal-Version:  >= 1.2.3
build-type: Simple
license: PublicDomain
author: Luke Palmer, Pepe Iborra
maintainer: pepeiborra@gmail.com
homepage: http://github.com/pepeiborra/control-monad-free
description: 
          This package provides datatypes to construct Free monads, 
	  Free monad transformers, and useful instances. In addition it
	  provides the constructs to avoid quadratic complexity of left 
	  associative bind, as explained in:
          .
          * Janis Voigtlander, /Asymptotic Improvement of Computations over Free Monads, MPC'08/
 
synopsis: Free monads and monad transformers
category: Control, Monads
stability: experimental

Flag transformers
   default: False

Library
  buildable: True
  build-depends: base
  if flag(transformers)
     build-depends: transformers
  else
     build-depends: mtl
  extensions:  StandaloneDeriving, Rank2Types, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, UndecidableInstances, OverlappingInstances
  exposed-modules:
     Control.Monad.Free
     Control.Monad.Free.Zip
     Control.Monad.Free.Improve
